# ZhoMind-v2

./: .gitignore  README.md  docker-compose.yml  findings.md  progress.md  task_plan.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260415_0001_create_users.py  20260416_0002_create_documents_tables.py  20260416_0003_create_chat_tables.py  20260423_0004_add_document_source_content.py  20260424_0005_add_document_publication_lifecycle_fields.py  20260425_0006_add_dense_retrieval_fields.py
backend/app/: main.py
backend/app/auth/: schemas.py
backend/app/chat/: schemas.py
backend/app/common/: config.py  deps.py  exceptions.py  logger.py  request_id.py  responses.py  security.py
backend/app/documents/: build_service.py  chunker.py  dense_index_service.py  dense_maintenance_service.py  job_dispatcher.py  operator_service.py  parsers.py  schemas.py  types.py
backend/app/extensions/: ark_llm_provider.py  langchain_chat_providers.py  langchain_embedding_providers.py  provider_router.py  registry.py
backend/app/infra/: db.py  milvus.py  milvus_document_index.py  minio.py  redis.py
backend/app/model/: __init__.py  chat.py  document.py  user.py
backend/app/rag/: dense_contract.py  interfaces.py
backend/app/repository/: chat_repository.py  user_repository.py
backend/app/service/: auth_service.py  chat_service.py  document_retrieval_service.py  runtime_trace_mapper.py
backend/app/tasks/: interfaces.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_flow.py  (+7 more)
(+63 files in other folders)
