[project]
name = "zhomind-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "alembic>=1.13.0,<2.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "bcrypt>=4.0.1,<4.1.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "redis>=5.0.0,<6.0.0",
  "pymilvus>=2.5.0,<3.0.0",
  "minio>=7.2.7,<8.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "langchain>=0.3.0,<0.4.0",
  "langgraph>=0.2.40,<0.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
